Minor fix + fix overflow

--- a/app/src/style/app.scss
+++ b/app/src/style/app.scss
@@ -10,12 +10,15 @@
 @use '@carbon/motion' as motion;
 
 .container-w-sidenav {
-	margin-top: 0 !important;
-	padding: 3rem 0 0;
-	margin-left: 0.5rem * 32;
-	@include breakpoint.breakpoint-down('lg') {
-		margin-left: 0;
-	}
+	@apply mr-0 p-0 lg:ml-[calc(32*0.5rem)];
+
+	// @include breakpoint.breakpoint-down('lg') {
+	//	margin-left: 0;
+	// }
+}
+
+body {
+	height: calc(100% - 3rem);
 }
 
 $theme-cosmo: (
